--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,6 @@
-REACT_APP_ALCHEMY_API_KEY=https://eth-sepolia.g.alchemy.com/v2/2_48lVmfR1qRzWDKFoUS2_2ygA22-PRJ
-REACT_APP_SAVINGS_POOL_ADDRESS=0x8a26E3a9a73968A9A0CdaB240b511510Ebec1ed2
-REACT_APP_MOCK_USDC_ADDRESS=0x5f688565FB0aFF417c32b7a46D1630dD7cBF50E2
-REACT_APP_MOCK_DAI_ADDRESS=0x4FE7472392f2980a36c061522Aee0fB3b10aFf02
-REACT_APP_MOCK_USDT_ADDRESS=0x5b42a66fe05011F10D5d9961AD4ac1ad096b39C5
-REACT_APP_MOCK_AGGREGATOR_ADDRESS=0xb9eA92f19138dD81488f2A09D85943F5E0a16950
+REACT_APP_ALCHEMY_API_KEY=https://eth-sepolia.g.alchemy.com/v2/
+REACT_APP_SAVINGS_POOL_ADDRESS=
+REACT_APP_MOCK_USDC_ADDRESS=
+REACT_APP_MOCK_DAI_ADDRESS=
+REACT_APP_MOCK_USDT_ADDRESS=
+REACT_APP_MOCK_AGGREGATOR_ADDRESS=
