--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-REACT_APP_ALCHEMY_API_KEY=https://eth-sepolia.g.alchemy.com/v2/
+REACT_APP_ALCHEMY_API_KEY=https://eth-sepolia.g.alchemy.com/
 REACT_APP_SAVINGS_POOL_ADDRESS=
 REACT_APP_MOCK_USDC_ADDRESS=
 REACT_APP_MOCK_DAI_ADDRESS=
