Implement backend URL configuration and update chatbot API call

--- a/frontend/.env
+++ b/frontend/.env
@@ -4,3 +4,4 @@ REACT_APP_MOCK_USDC_ADDRESS=
 REACT_APP_MOCK_DAI_ADDRESS=
 REACT_APP_MOCK_USDT_ADDRESS=
 REACT_APP_MOCK_AGGREGATOR_ADDRESS=
+REACT_APP_BACKEND_URL=
